--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
-@import url(style/header.css);
+@import url(styles/header.css);
 
-:root{
-    --cor-de-fundo: #c5cad6;
+:root {
+    --cor-de-fundo:#36cecc;
+    --cor-cabecalho:#e32d40;
+
 }
 
-body{
+body {
     background-color: var(--cor-de-fundo);
-}
+    margin: 0;
 
+
+}
 h1{
-    background-color: white;
+    font-weight: normal;
 }
